--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -1,3 +1,10 @@
 spring:
   profiles:
     active: dev
+
+application:
+  cron: "0 0 */3 * * *"
+  versions-url:
+    spring-boot: https://start.spring.io/metadata/client
+  releases-url:
+    spring-boot: https://github.com/spring-projects/spring-boot/releases/tag/v
